@@ -1,3 +1,7 @@
+2008-10-04  Paolo Borelli  <pborelli@katamail.com>
+
+	* src/baobab-utils.c: small cleanup patch by Kristian Rumberg.
+
 2008-09-11  Fabio Marzocca  <thesaltydog@gmail.com>
 
 	* src/baobab-remote-connect-dialog.c:
